--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -8,18 +8,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.PostDetailActivity"
-    android:background="#fff"
-
-
-    >
-    
-
+    android:background="#fff">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        
 
         <ImageView
             android:id="@+id/post_detail_img"
@@ -82,13 +75,8 @@
             app:layout_constraintTop_toBottomOf="@+id/view" />
 
         <TextView
-
-
             android:textColor="#373737"
             android:textSize="13dp"
-
-
-
             android:lineSpacingExtra="8dp"
             android:id="@+id/post_detail_desc"
             android:layout_width="0dp"
@@ -114,8 +102,6 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <EditText
-
-
             android:id="@+id/post_detail_comment"
             android:layout_width="238dp"
             android:layout_height="48dp"
@@ -133,23 +119,20 @@
             app:layout_constraintTop_toBottomOf="@+id/showMore" />
 
         <Button
-                android:id="@+id/post_detail_add_comment_btn"
-                android:layout_width="64dp"
-                android:layout_height="44dp"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/edittext_button_style"
-                android:padding="10dp"
-                android:text="Add"
-                android:textSize="14dp"
-                app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/post_detail_comment"
-                app:layout_constraintTop_toTopOf="@+id/post_detail_comment"
-                app:layout_constraintVertical_bias="0.0" />
-
-
-
+            android:id="@+id/post_detail_add_comment_btn"
+            android:layout_width="70dp"
+            android:layout_height="49dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/edittext_button_style"
+            android:padding="10dp"
+            android:text="Add"
+            android:textSize="14dp"
+            app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/post_detail_comment"
+            app:layout_constraintTop_toTopOf="@+id/post_detail_comment"
+            app:layout_constraintVertical_bias="0.0" />
 
 
         <de.hdodenhof.circleimageview.CircleImageView
