--- a/app/src/main/res/layout/row_post_item.xml
+++ b/app/src/main/res/layout/row_post_item.xml
@@ -4,62 +4,81 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp">
+    android:layout_height="300dp">
 
-    <ImageView
-
-        android:scaleType="centerCrop"
-        android:id="@+id/row_post_img"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card"
+        android:layout_width="392dp"
+        android:layout_height="268dp"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.698"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:layout_constraintVertical_bias="0.13">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
-        android:layout_height="85dp"
-        app:layout_constraintBottom_toBottomOf="@+id/row_post_img"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/black_gradient" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/con1"
+            android:layout_width="match_parent"
+            android:layout_height="268dp"
+            android:orientation="vertical"
+            android:elevation="5dp"
+            >
 
-    <TextView
-        android:id="@+id/row_post_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:text="TextView"
-        android:textColor="#fff"
-        android:textSize="15dp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="@+id/row_post_img"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+            <ImageView
+                android:id="@+id/row_post_img"
+                android:layout_width="match_parent"
+                android:layout_height="194dp"
+                android:contentDescription="Thumbnail Cerpen"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.026"
+                app:srcCompat="@drawable/ic_launcher_background" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/row_post_profile_img"
-        android:layout_width="56dp"
-        android:layout_height="57dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.941"
-        app:layout_constraintStart_toEndOf="@+id/row_post_title"
-        tools:srcCompat="@tools:sample/avatars" />
+            <ImageView
+                android:id="@+id/play_img"
+                android:layout_width="89dp"
+                android:layout_height="83dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/row_post_img"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/row_post_img"
+                app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
 
-    <ImageView
-        android:id="@+id/play_img"
-        android:layout_width="89dp"
-        android:layout_height="83dp"
-        android:layout_marginTop="80dp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/row_post_img"
-        app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
+            <TextView
+                android:id="@+id/row_post_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:text="Judul"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                app:layout_constraintEnd_toStartOf="@+id/row_post_profile_img"
+                app:layout_constraintHorizontal_bias="0.046"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/row_post_img" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/row_post_profile_img"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_marginEnd="24dp"
+                android:src="@drawable/ic_baseline_person_24"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="0.5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/row_post_img"
+                app:layout_constraintVertical_bias="0.588" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
