--- a/app/src/main/res/layout/row_comment.xml
+++ b/app/src/main/res/layout/row_comment.xml
@@ -87,13 +87,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-
         android:id="@+id/delete_btn_comment"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/circle_bg"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toEndOf="@+id/nama"
