--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,12 +48,12 @@
         app:layout_constraintTop_toTopOf="@+id/view2" />
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/regUserPhoto"
         android:layout_width="119dp"
         android:layout_height="111dp"
-        android:src="@drawable/userphoto"
-        app:civ_border_color="@color/colorPrimary"
+        android:src="@drawable/grup_11"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6" />
